Actualizar respuesta de login y registro
