# backend/src/routers/auth.router.ts
@@ -10,7 +10,7 @@ AuthRouter.post(
   "/login",
   dtoValidationMiddleware(LoginDto),
   /*
-  #swagger.path = '/login'
+  #swagger.path = '/auth/login'
   #swagger.tags = ['Auth']
   #swagger.description = 'Authenticates a user and returns an authorization token'
    #swagger.method = 'post'
@@ -84,7 +84,7 @@ AuthRouter.post(
   "/register",
   dtoValidationMiddleware(RegisterDto),
   /*
-  #swagger.path = '/register'
+  #swagger.path = '/auth/register'
   #swagger.tags = ['Auth']
   #swagger.description = 'Creates new user and returns an authorization token'
 
@@ -99,7 +99,7 @@ AuthRouter.post(
             name: { type: 'string', example: 'Juan Pérez' },
             email: { type: 'string', example: 'juan.perez@email.com' },
             password: { type: 'string', example: 'Password123!' },
-            image: { type: 'string', example: 'https://example.com/avatar.jpg' }
+            
           }
         }
       }
